examples/test/testpolicy18757.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18757
  namespace: namespace214
spec:
  podSelector:
    matchLabels:
      key33: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value49
          key39: value48
          key20: value29
      podSelector:
        matchLabels:
          key25: value42
          key0: value14
